--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/LVL_Debug.LVL_Debug
 EditorStartupMap=/Game/Levels/LVL_Debug.LVL_Debug
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
